test/message/syntactic-tail-call-without-return.out
*%(basename)s:12: SyntaxError: Tail call expression is not allowed here
  var x =  continue  f()  ;
           ^^^^^^^^^^^^^
SyntaxError: Tail call expression is not allowed here
